# multi-agent-system-rust-pixijs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: lib.rs
www/: index.js
